# pkg/handler/handler.go
@@ -1,6 +1,8 @@
 package handler
 
 import (
+	"net/http"
+
 	_ "github.com/Ckala62rus/go/docs" // docs folder
 	"github.com/Ckala62rus/go/pkg/services"
 	"github.com/gin-gonic/gin"
@@ -19,6 +21,14 @@ func NewHandler(services *services.Service) *Handler {
 func (h *Handler) InitRoutes() *gin.Engine {
 	router := gin.New()
 
+	// for save images files
+	router.Static("/images", "./images")
+
+	// redirect on swagger ui dashboard
+	router.GET("/", func(c *gin.Context) {
+		c.Redirect(http.StatusMovedPermanently, "/swagger/index.html")
+	})
+
 	api := router.Group("/api")
 	{
 		auth := api.Group("/auth")
@@ -26,6 +36,8 @@ func (h *Handler) InitRoutes() *gin.Engine {
 			auth.POST("/sign-up", h.signUp)
 			auth.POST("/sign-in", h.signIn)
 		}
+
+		api.POST("/upload", h.UploadImage)
 
 		users := api.Group("/users", h.userIdentity)
 		{
